# chatterbox

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  config.example.json  package-lock.json  package.json  start.bat  start.ps1  streamer.example.json  tsconfig.json
.cursor/rules/: chatterbox.mdc
obs/: README.md  chatterbox-overlay.html  setup-obs.ps1
obs-plugin/: CMakeLists.txt  README.md  build.ps1
obs-plugin/src/: chatterbox.cpp  plugin-main.cpp  server-manager.cpp  server-manager.hpp
public/dashboard/: dashboard.css  dashboard.js  index.html
public/overlay/: index.html  obs.html  overlay-standalone.js  overlay.css  overlay.js
public/shared/: ws-client.js
scripts/: build-obs-local.mjs  build-release.mjs  bundle-plugin-data.mjs  download-node.mjs
src/: config.ts  highlights.ts  hub.ts  index.ts  profile.ts  simulate.ts  tmi.d.ts  types.ts
src/connectors/: index.ts  kick-lookup.ts  kick.ts  twitch.ts  x-broadcast.ts
src/server/: http.ts  ws.ts
test/: highlights.test.ts  profile.test.ts
